--- a/paper/peekbank.bib
+++ b/paper/peekbank.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Mike Frank at 2024-11-16 08:26:55 -0800 
+%% Created for Mike Frank at 2025-01-07 19:46:49 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{vanderweele2023dimensional,
+	author = {VanderWeele, Tyler J and Batty, Charles JK},
+	date-added = {2025-01-07 19:46:43 -0800},
+	date-modified = {2025-01-07 19:46:43 -0800},
+	journal = {Journal of Causal Inference},
+	number = {1},
+	pages = {20220074},
+	publisher = {De Gruyter},
+	title = {On the dimensional indeterminacy of one-wave factor analysis under causal effects},
+	volume = {11},
+	year = {2023}}
 
 @article{lany2018,
 	author = {Lany, Jill},
